# kmerdet

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: example_config.toml
docs/benchmarking/: README.md
docs/features/: adaptive-thresholds.md  confidence-scoring.md  correctness-and-sensitivity.md  coverage.md  detect.md  detection-trace.md  filter-report.md  filter.md  graph-visualization.md  ground-truth.md  merge.md  multi-k-detection.md  plot.md  run.md  stats.md  umi-aware-counting.md  vcf-output.md
docs/paper/: Makefile  main.tex  references.bib
docs/planning/: development-roadmap.md  open-questions.md  research-roadmap.md
jf_wrapper/: jf_wrapper.cpp  jf_wrapper.h
src/: benchmark.rs  config.rs  lib.rs  main.rs  trace.rs
src/cli/: benchmark.rs  coverage.rs  detect.rs  filter.rs  merge.rs  mod.rs  plot.rs  pon.rs  run.rs  stats.rs
src/confidence/: mod.rs  pvalue.rs  qual.rs
src/filter/: adaptive.rs  alt_mode.rs  conditions.rs  mod.rs  pon.rs  reference_mode.rs  report.rs
src/graph/: builder.rs  dot.rs  mod.rs  pathfind.rs  pruning.rs
src/jellyfish/: ffi.rs  header.rs  mod.rs  reader.rs
src/kmer/: canonical.rs  encoding.rs  mod.rs
src/output/: csv.rs  excel.rs  json.rs  mod.rs  tsv.rs  vcf.rs
src/report/: mod.rs
tests/: test_classifier.rs  test_confidence.rs  test_detect_pipeline.rs  test_filter.rs  test_filter_pipeline.rs  test_graph.rs  test_integration.rs  test_kmer.rs  test_merge_pipeline.rs  test_output.rs  test_output_formats.rs  test_quantifier.rs  test_stats_plot.rs  test_trace.rs  test_walker.rs
(+67 files in other folders)
